--- a/RPChecker/RPChecker.csproj
+++ b/RPChecker/RPChecker.csproj
@@ -86,36 +86,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="convertMethod.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Util\convertMethod.cs" />
+    <Compile Include="Form\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Form\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmChart.cs">
+    <Compile Include="Form\Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmChart.Designer.cs">
+    <Compile Include="Form\Form2.designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form\FrmChart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\FrmChart.Designer.cs">
       <DependentUpon>FrmChart.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLoadFiles.cs">
+    <Compile Include="Form\FrmLoadFiles.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmLoadFiles.Designer.cs">
+    <Compile Include="Form\FrmLoadFiles.Designer.cs">
       <DependentUpon>FrmLoadFiles.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistryStorage.cs" />
-    <Compile Include="VsPipeProcess.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="Util\RegistryStorage.cs" />
+    <Compile Include="Util\VsPipeProcess.cs" />
+    <EmbeddedResource Include="Form\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmChart.resx">
+    <EmbeddedResource Include="Form\Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\FrmChart.resx">
       <DependentUpon>FrmChart.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmLoadFiles.resx">
+    <EmbeddedResource Include="Form\FrmLoadFiles.resx">
       <DependentUpon>FrmLoadFiles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
