--- a/RPChecker/RPChecker.csproj
+++ b/RPChecker/RPChecker.csproj
@@ -49,7 +49,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Rp.ico</ApplicationIcon>
+    <ApplicationIcon>Icon\Rp.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -87,44 +87,44 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Util\convertMethod.cs" />
-    <Compile Include="Form\Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\Form2.cs">
+    <Compile Include="Forms\Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Form2.designer.cs">
+    <Compile Include="Forms\Form2.designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\FrmChart.cs">
+    <Compile Include="Forms\FrmChart.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\FrmChart.Designer.cs">
+    <Compile Include="Forms\FrmChart.Designer.cs">
       <DependentUpon>FrmChart.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\FrmLoadFiles.cs">
+    <Compile Include="Forms\FrmLoadFiles.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\FrmLoadFiles.Designer.cs">
+    <Compile Include="Forms\FrmLoadFiles.Designer.cs">
       <DependentUpon>FrmLoadFiles.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\RegistryStorage.cs" />
     <Compile Include="Util\VsPipeProcess.cs" />
-    <EmbeddedResource Include="Form\Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Form2.resx">
+    <EmbeddedResource Include="Forms\Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\FrmChart.resx">
+    <EmbeddedResource Include="Forms\FrmChart.resx">
       <DependentUpon>FrmChart.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\FrmLoadFiles.resx">
+    <EmbeddedResource Include="Forms\FrmLoadFiles.resx">
       <DependentUpon>FrmLoadFiles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -163,8 +163,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Blank.ico" />
-    <Content Include="Rp.ico" />
+    <Content Include="Icon\Blank.ico" />
+    <Content Include="Icon\Rp.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
