--- a/RPChecker/RPChecker.csproj
+++ b/RPChecker/RPChecker.csproj
@@ -86,6 +86,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\FormUpdater.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormUpdater.designer.cs">
+      <DependentUpon>FormUpdater.cs</DependentUpon>
+    </Compile>
     <Compile Include="Util\convertMethod.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
@@ -114,12 +120,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\RegistryStorage.cs" />
+    <Compile Include="Util\SystemMenu.cs" />
+    <Compile Include="Util\Updater.cs" />
     <Compile Include="Util\VsPipeProcess.cs" />
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormUpdater.resx">
+      <DependentUpon>FormUpdater.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmChart.resx">
       <DependentUpon>FrmChart.cs</DependentUpon>
