Use hard link to avoid garbled path string while calling l-smash.

--- a/RPChecker/RPChecker.csproj
+++ b/RPChecker/RPChecker.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Util\FilterProcess\Utils.cs" />
     <Compile Include="Util\LogBuffer.cs" />
     <Compile Include="Util\MatchExpression.cs" />
+    <Compile Include="Util\NativeMethods.cs" />
     <Compile Include="Util\Notification.cs" />
     <Compile Include="Util\ToolKits.cs" />
     <Compile Include="Forms\Form1.cs">
