--- a/RPChecker/App.config
+++ b/RPChecker/App.config
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
-  <appSettings>
-    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true"/>
-  </appSettings>
+    <System.Windows.Forms.ApplicationConfigurationSection>
+        <add key="DpiAwareness" value="PerMonitorV2" />
+        <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+    </System.Windows.Forms.ApplicationConfigurationSection>
 </configuration>
