--- a/RPChecker/packages.config
+++ b/RPChecker/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net48" />
+  <package id="Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Jil" version="2.17.0" targetFramework="net48" />
   <package id="Sigil" version="4.7.0" targetFramework="net48" />
 </packages>
