--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -65,6 +65,6 @@ jobs:
       with:
         name: Package-${{ matrix.configuration }}
         path: |
-          rp-checker\RPChecker\bin\${{ matrix.configuration }}\
-          !rp-checker\RPChecker\bin\${{ matrix.configuration }}\*.xml
-          !rp-checker\RPChecker\bin\${{ matrix.configuration }}\*.pdb
+          RPChecker\bin\${{ matrix.targetplatform }}\${{ matrix.configuration }}\
+          !RPChecker\bin\${{ matrix.targetplatform }}\${{ matrix.configuration }}\*.xml
+          !RPChecker\bin\${{ matrix.targetplatform }}\${{ matrix.configuration }}\*.pdb
